# cointoss-rust

./: .gitignore  HcScI8Rcf6da3Wan9fKkqWwtCgbiitzb9MDV3CeUeXzpr659PO5gO6oFaZ9kuxa  _app.json  _conductor-config.toml  _package-lock.json  alice.key  bob.key  cointoss-rust.code-workspace  conductor-config-node1.toml  conductor-config-node2.toml  conductor-config.toml  john.key  package-lock.json  package.json  run-windows-node1.sh  run-windows-node2.sh
dna-src/test/: index.js  package-lock.json  package.json
dna-src/zomes/cointoss/code/: Cargo.toml
dna-src/zomes/cointoss/code/src/: entries.rs  lib.rs  pseudorand.rs  utils.rs
dna-src/zomes/cointoss/code/src/anchor/: mod.rs
dna-src/zomes/cointoss/code/src/messaging/: mod.rs
dna-src/zomes/cointoss/code/src/player/: handlers.rs  mod.rs
dna-src/zomes/cointoss/code/src/toss/: handlers.rs  mod.rs
learning/: actual.md  misc.md
test/: _index.js  index.js  index_tests_scenarios.js  package-lock.json  package.json
ui/: index.html  index.js
ui2/: _index.html  index.html
zomes/cointoss/code/: Cargo.toml
zomes/cointoss/code/src/: entries.rs  lib.rs
zomes/cointoss/code/src/anchor/: mod.rs
